# tiny-wifi-analyzer

./: .gitignore  LICENSE  Makefile  README.md  Tiny Wi-Fi Analyzer.spec  config.example.json  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: cd.yaml
docs/: index.html
packaging/: BUILD.md  build_mac.sh  build_mac.spec  create_icon.sh
packaging/assets/: wifi-icon.icns
tiny_wifi_analyzer/: __main__.py  config.py  series.py
view-src/: index.html
