[project]
name = "tiny-wifi-analyzer"
version = "0.7.1"
description = "A tiny Wi-Fi analyzer for macOS with enhanced features"
authors = [
    {name = "David Klein", email = "david@soinkleined.com"},
    {name = "nolze", email = "nolze@int3.net"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10,<3.15"
keywords = ["wifi", "analyzer", "macos", "network", "scanner"]
dependencies = [
    "pywebview>=6.0",
    "pyobjc-core>=12.1",
    "pyobjc-framework-cocoa>=12.1",
    "pyobjc-framework-CoreWLAN>=12.1",
    "pyobjc-framework-WebKit>=12.1",
    "pyobjc-framework-corelocation>=12.1",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.19.0",
    "pytest>=9.0",
]

[project.urls]
Homepage = "https://github.com/soinkleined/tiny-wifi-analyzer"
Repository = "https://github.com/soinkleined/tiny-wifi-analyzer"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
